#323 Fixed bug truncate

--- a/app/assets/stylesheets/module/_related-careers.scss
+++ b/app/assets/stylesheets/module/_related-careers.scss
@@ -90,7 +90,7 @@
   background-color: $white;
   @extend %margin-auto;
   @extend %relative;
-  @include boxSize(rem(254), rem(270));
+  @include boxSize(rem(234), rem(270));
 
   @include e('photo') {
     @extend %overflow-hidden;
